# Ray-Tracer

./: CMakeLists.txt  README.md  art.scn  bear.scn  spheres1.scn  spheres2.scn  test.scn
src/: camera.cpp  camera.h  floatvector.cpp  floatvector.h  hit.cpp  hit.h  image.cpp  image.h  light.cpp  light.h  main.cpp  material.cpp  material.h  pixel.cpp  pixel.h  ray.cpp  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  tags
